--- a/JavaScript/zoom/src/views/home.pug
+++ b/JavaScript/zoom/src/views/home.pug
@@ -11,12 +11,17 @@ html(lang="en")
     header 
       h1 NOOM 
     main
-
-      //- playsinline설정하면 휴대폰에서 전체화면을 막아줌 
-      video#myFace(autoplay, playsinline, width="400", height="400") 
-      button#mute Mute 
-      button#camera Turn Camera Off 
-      select#cameras 
-        option(value="device") Face Camera
+      div#welcome
+        form
+          input(placeholder="room name", required, type="text")
+          button Enter room
+      div#call 
+        div#myStream
+          //- playsinline설정하면 휴대폰에서 전체화면을 막아줌 
+          video#myFace(autoplay, playsinline, width="400", height="400") 
+          button#mute Mute 
+          button#camera Turn Camera Off 
+          select#cameras 
+            option(value="device") Face Camera
     script(src="/socket.io/socket.io.js")
     script(src="/public/js/app.js" , type="module")
