--- a/JavaScript/zoom/src/views/home.pug
+++ b/JavaScript/zoom/src/views/home.pug
@@ -23,5 +23,7 @@ html(lang="en")
           button#camera Turn Camera Off 
           select#cameras 
             option(value="device") Face Camera
+        video#peerFace(autoplay, playsinline, width="400", height="400") 
+
     script(src="/socket.io/socket.io.js")
     script(src="/public/js/app.js" , type="module")
