--- a/JavaScript/websocket/src/views/home.pug
+++ b/JavaScript/websocket/src/views/home.pug
@@ -10,7 +10,10 @@ html(lang="en")
     header 
       h1 Noom 
     main 
-      h2 Welcome to Noom  
-      button call
+      h2 Welcome to Noom 
+      ul 
+      form
+        input(type="text", placeholder="write a msg", required)
+        buton Send
     script(src = "/public/js/app.js")
     
