--- a/JavaScript/websocket/src/views/home.pug
+++ b/JavaScript/websocket/src/views/home.pug
@@ -10,9 +10,11 @@ html(lang="en")
     header 
       h1 Noom 
     main 
-      h2 Welcome to Noom 
+      form#nickname
+        input(type="text", placeholder="choose a nickname", required)
+        buton Save
       ul 
-      form
+      form#message
         input(type="text", placeholder="write a msg", required)
         buton Send
     script(src = "/public/js/app.js")
